ops/kubernetes/sql-proxy-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: smaccoun-homepage-sql-proxy
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: "RollingUpdate"  
  selector:
    matchLabels:
      app: "smaccoun-homepage"
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: "smaccoun-homepage"
        tier: backend
        track: stable
    spec:
      containers:
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=smaccoun-homepage:us-central1:smaccoun-homepage=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      # [END volumes]
