ops/kubernetes/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: smaccoun-homepage
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: smaccoun-homepage-frontend
spec:
  selector:
    matchLabels:
      app: smaccoun-homepage
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: smaccoun-homepage
        tier: frontend
        track: stable
    spec:
      containers:
      - name: smaccoun-homepage-frontend
        image: "smaccoun/smaccoun-homepage-frontend:4fa03a93466062c0a048d0cdee5f028912a7d559"
        ports:
            - containerPort: 5000
              name: "external"
              protocol: "TCP"
